--- a/src/components/NavBarComponents/NavBar.css
+++ b/src/components/NavBarComponents/NavBar.css
@@ -44,3 +44,6 @@
 .Left-NavBar{
     text-align: right; /*Alinearlos a la derecha horizontal*/
 }
+.stars_coins{
+    color: rgb(var(--starlight-gray));
+}
