--- a/src/components/NavBarComponents/CoinsButton.css
+++ b/src/components/NavBarComponents/CoinsButton.css
@@ -1,12 +1,13 @@
 .buybutton{
-    font-size: smaller;
-    width: 6rem;
+    font-size: 12px;
+    width: 4rem;
+    height: 2rem;
 }
 .dropdown-menu {
     white-space: nowrap; /* evita que se parta en dos líneas */
 }
 h6.Discount{
-    font-size: x-small;
+    font-size: xx-small;
     margin-top: 5px; /*Es un interlineado*/
     margin-bottom: 5px; /*Es un interlineado*/
 }
