--- a/src/components/StreamingComponents/ChatSection.css
+++ b/src/components/StreamingComponents/ChatSection.css
@@ -3,11 +3,10 @@
     height: 100%;
 }
 .ChatTitle{
-    height: 2rem;
     border-bottom: 1px solid black;
 }
 .RightSideScroll{
-    height: 39rem;
+    height: 100%;
     overflow-y: auto;
     text-align: left;
 }
