--- a/src/GlobalObjects/Animations.css
+++ b/src/GlobalObjects/Animations.css
@@ -5,15 +5,7 @@
 }
 .pages {
 	padding-top: 4rem; /*IMPORTANTISIMO SINO EL SIDEBAR SE MUERE*/
-	background: linear-gradient(
-		270deg,
-		#3e13b8,   /* 15% más oscuro que #5c1aff */
-		#9e1c8d,   /* 15% más oscuro que #c724b1 */
-		#d158b2,   /* 15% más oscuro que #ff6ad5 */
-		#46afd1,   /* 15% más oscuro que #56ccf2 */
-		#2467bb,   /* 15% más oscuro que #2f80ed */
-		#7d1acb    /* 15% más oscuro que #a020f0 */
-	);
+	background: rgb(var(--space-black));
 	background-size: 800% 800%;
 	animation: spaceMove 18s ease infinite;
 	color: rgb(var(--starlight-gray));
