--- a/src/components/NavBarComponents/UserIcon.css
+++ b/src/components/NavBarComponents/UserIcon.css
@@ -1,8 +1,15 @@
 /* components/NavBar/UserIcon.css */
-
+.PfP{
+    width: 400%;
+    border-radius: 100%;
+}
+.pfpdropdown{
+    width: 20%;
+    border-radius: 100%;
+}
 .user-icon-button {
-  border: none;
-  background: transparent;
+    border: none;
+    background: transparent;
 }
 
 .user-icon-cursor {
