--- a/src/components/ProfileComponents/Profile.css
+++ b/src/components/ProfileComponents/Profile.css
@@ -5,7 +5,11 @@
     height: 100px;
     font-size: 2rem;
 }
-
+.Profile_Img{
+    width: 450px;
+    height: 450px;
+    border-radius: 5%;
+}
 .profile-points-icon {
     width: 30px;
     height: 30px;
