--- a/src/components/StreamingComponents/PointsBar.css
+++ b/src/components/StreamingComponents/PointsBar.css
@@ -4,3 +4,16 @@
     height: 5%;
     border: 1px solid black;
 }
+.support-button{
+    height: 30px;
+    width: 30px;
+    border-radius: 40%;
+    background-color: transparent;
+    transition: background-color 0.6s ease, box-shadow 0.6s ease;
+}
+
+.support-button:hover{
+    background-color: rgba(var(--nebula-violet), 0.3);
+    box-shadow: 0 0 20px rgba(160, 32, 240, 0.4),
+				0 0 35px rgba(255, 110, 199, 0.25);
+}
